점프점프 플레이어 작업중
테스트한번 해본거임

--- a/BaseFrame.vcxproj
+++ b/BaseFrame.vcxproj
@@ -148,6 +148,7 @@
   <ItemGroup>
     <ClInclude Include="BtnUI.h" />
     <ClInclude Include="Calculation.h" />
+    <ClInclude Include="DH_CPlayer.h" />
     <ClInclude Include="EffectFactory.h" />
     <ClInclude Include="Effect.h" />
     <ClInclude Include="EffectMgr.h" />
@@ -198,6 +199,7 @@
   <ItemGroup>
     <ClCompile Include="BtnUI.cpp" />
     <ClCompile Include="Calculation.cpp" />
+    <ClCompile Include="DH_CPlayer.cpp" />
     <ClCompile Include="EffectFactory.cpp" />
     <ClCompile Include="pch.cpp" />
     <ClCompile Include="Effect.cpp" />
