player가 발판 ã과 ã충돌하면 ã돌게 함

--- a/BaseFrame.vcxproj
+++ b/BaseFrame.vcxproj
@@ -148,6 +148,7 @@
   <ItemGroup>
     <ClInclude Include="BtnUI.h" />
     <ClInclude Include="Calculation.h" />
+    <ClInclude Include="CJumpPad.h" />
     <ClInclude Include="EffectFactory.h" />
     <ClInclude Include="Effect.h" />
     <ClInclude Include="EffectMgr.h" />
@@ -158,6 +159,7 @@
     <ClInclude Include="fmod_dsp_effects.h" />
     <ClInclude Include="fmod_errors.h" />
     <ClInclude Include="fmod_output.h" />
+    <ClInclude Include="KL_CPlayer.h" />
     <ClInclude Include="MyPng.h" />
     <ClInclude Include="ColliderMgr.h" />
     <ClInclude Include="PanelUI.h" />
@@ -198,7 +200,9 @@
   <ItemGroup>
     <ClCompile Include="BtnUI.cpp" />
     <ClCompile Include="Calculation.cpp" />
+    <ClCompile Include="CJumpPad.cpp" />
     <ClCompile Include="EffectFactory.cpp" />
+    <ClCompile Include="KL_CPlayer.cpp" />
     <ClCompile Include="pch.cpp" />
     <ClCompile Include="Effect.cpp" />
     <ClCompile Include="EffectMgr.cpp" />
