점프 로직 , 배경 및 도형, 화살표 제작

--- a/BaseFrame.vcxproj
+++ b/BaseFrame.vcxproj
@@ -149,6 +149,7 @@
     <ClInclude Include="BtnUI.h" />
     <ClInclude Include="Calculation.h" />
     <ClInclude Include="DH_CPlayer.h" />
+    <ClInclude Include="DH_CTile.h" />
     <ClInclude Include="EffectFactory.h" />
     <ClInclude Include="Effect.h" />
     <ClInclude Include="EffectMgr.h" />
@@ -200,6 +201,7 @@
     <ClCompile Include="BtnUI.cpp" />
     <ClCompile Include="Calculation.cpp" />
     <ClCompile Include="DH_CPlayer.cpp" />
+    <ClCompile Include="DH_CTile.cpp" />
     <ClCompile Include="EffectFactory.cpp" />
     <ClCompile Include="pch.cpp" />
     <ClCompile Include="Effect.cpp" />
