--- a/BaseFrame.vcxproj.filters
+++ b/BaseFrame.vcxproj.filters
@@ -124,6 +124,18 @@
     <Filter Include="소스 파일\02.Scene\03.ROUNDROUMD">
       <UniqueIdentifier>{db849b64-9fcb-4d65-9df3-987864f093c4}</UniqueIdentifier>
     </Filter>
+    <Filter Include="소스 파일\03.Object\00.Player\HW_CPlayer">
+      <UniqueIdentifier>{70aad255-5545-4c3b-88a5-5f9e3a306af3}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="소스 파일\03.Object\01.Monster\HW_CMonster">
+      <UniqueIdentifier>{55cf9bdd-0277-497a-97ce-b19ca30f309b}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="소스 파일\01.Mgr\12. LineMgr">
+      <UniqueIdentifier>{108e0215-95e0-4011-9645-215544db1294}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="소스 파일\01.Mgr\12. LineMgr\00. Line">
+      <UniqueIdentifier>{d0d17031-0ec0-44ed-a94e-5753cd770200}</UniqueIdentifier>
+    </Filter>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="framework.h">
@@ -270,6 +282,18 @@
     <ClInclude Include="Scene_ROUNDROUND.h">
       <Filter>소스 파일\02.Scene\03.ROUNDROUMD</Filter>
     </ClInclude>
+    <ClInclude Include="HW_CPlayer.h">
+      <Filter>소스 파일\03.Object\00.Player\HW_CPlayer</Filter>
+    </ClInclude>
+    <ClInclude Include="HW_CMonster.h">
+      <Filter>소스 파일\03.Object\01.Monster\HW_CMonster</Filter>
+    </ClInclude>
+    <ClInclude Include="HW_CLine.h">
+      <Filter>소스 파일\01.Mgr\12. LineMgr\00. Line</Filter>
+    </ClInclude>
+    <ClInclude Include="HW_CLineMgr.h">
+      <Filter>소스 파일\01.Mgr\12. LineMgr</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="SceneMgr.cpp">
@@ -382,6 +406,18 @@
     </ClCompile>
     <ClCompile Include="Scene_ROUNDROUND.cpp">
       <Filter>소스 파일\02.Scene\03.ROUNDROUMD</Filter>
+    </ClCompile>
+    <ClCompile Include="HW_CPlayer.cpp">
+      <Filter>소스 파일\03.Object\00.Player\HW_CPlayer</Filter>
+    </ClCompile>
+    <ClCompile Include="HW_CMonster.cpp">
+      <Filter>소스 파일\03.Object\01.Monster\HW_CMonster</Filter>
+    </ClCompile>
+    <ClCompile Include="HW_CLine.cpp">
+      <Filter>소스 파일\01.Mgr\12. LineMgr\00. Line</Filter>
+    </ClCompile>
+    <ClCompile Include="HW_CLineMgr.cpp">
+      <Filter>소스 파일\01.Mgr\12. LineMgr</Filter>
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
