점프 차징, 게임오버 , UI , 스페셜타일, 꾸미기

--- a/BaseFrame.vcxproj
+++ b/BaseFrame.vcxproj
@@ -148,7 +148,10 @@
   <ItemGroup>
     <ClInclude Include="BtnUI.h" />
     <ClInclude Include="Calculation.h" />
+    <ClInclude Include="DH_CGage.h" />
+    <ClInclude Include="DH_CGameOver.h" />
     <ClInclude Include="DH_CPlayer.h" />
+    <ClInclude Include="DH_CScore.h" />
     <ClInclude Include="DH_CTile.h" />
     <ClInclude Include="CJumpPad.h" />
     <ClInclude Include="EffectFactory.h" />
@@ -202,7 +205,10 @@
   <ItemGroup>
     <ClCompile Include="BtnUI.cpp" />
     <ClCompile Include="Calculation.cpp" />
+    <ClCompile Include="DH_CGage.cpp" />
+    <ClCompile Include="DH_CGameOver.cpp" />
     <ClCompile Include="DH_CPlayer.cpp" />
+    <ClCompile Include="DH_CScore.cpp" />
     <ClCompile Include="DH_CTile.cpp" />
     <ClCompile Include="CJumpPad.cpp" />
     <ClCompile Include="EffectFactory.cpp" />
